force-app/main/default/objects/L_PR_Agreement_Affiliation_Relation__c/L_PR_Agreement_Affiliation_Relation__c.object-meta.xml
<CustomObject>
    <label>Agreement Affiliation Relation</label>
    <nameField>
        <displayFormat>AA-{000000}</displayFormat>
        <label>Relationship Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agreement Affiliation Relations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>