force-app/main/default/objects/L_PR_Agreement_Affiliation_Relation__c/fields/L_PR_Affiliation__c.field-meta.xml
<CustomField>
    <fullName>L_PR_Affiliation__c</fullName>
    <label>Affiliation</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <errorMessage>You can only select La Trobe Staff or External Contact Affiliation</errorMessage>
        <filterItems>
            <field>I_RM_Affiliation__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>External Contact</value>
        </filterItems>
        <filterItems>
            <field>I_RM_Affiliation__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>La Trobe Staff</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>I_RM_Affiliation__c</referenceTo>
    <relationshipLabel>Agreement Affiliation Relations</relationshipLabel>
    <relationshipName>Agreement_Affiliation_Relations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>