force-app/main/default/objects/L_PR_Agreement_Affiliation_Relation__c/fields/L_PR_Agreement__c.field-meta.xml
<CustomField>
    <fullName>L_PR_Agreement__c</fullName>
    <label>Agreement</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <errorMessage>You are not allowed to select this type of Agreement.</errorMessage>
        <filterItems>
            <field>Contract__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Partnership Agreement</value>
        </filterItems>
        <filterItems>
            <field>Contract__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>LTU Int Agent Agreement</value>
        </filterItems>
        <filterItems>
            <field>Contract__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>LTU Int Agent Variation Agreement</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contract__c</referenceTo>
    <relationshipLabel>Agreement Affiliation Relations</relationshipLabel>
    <relationshipName>Agreement_Affiliation_Relations</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>